--- a/templates/admin_temp/admin_add_category.html
+++ b/templates/admin_temp/admin_add_category.html
@@ -88,8 +88,12 @@
                                         <label class="form-label">Description</label>
                                         <textarea placeholder="Type here" class="form-control" rows="4" name="description" required></textarea>
                                     </div>
-
-
+                                    <div class="col-lg-4">
+                                        <div class="mb-4">
+                                            <label class="form-label">offerPercentage</label>
+                                            <input placeholder="0.00" class="form-control"  type="text" class="form-control"  name='offer'>
+                                        </div>
+                                    </div>
                             </div>
                         </div> <!-- card end// -->
                     </div>
