--- a/templates/user_temp/user_index.html
+++ b/templates/user_temp/user_index.html
@@ -4,9 +4,6 @@
 {% block body %}
 
 
-
-    
-
 <main class="main">
 
   <section class="section-slide">
@@ -35,7 +32,6 @@
 						</div>
 					</div>
 				</div>
-
 				<div class="item-slick1" style="background-image: url({% static 'img/hero/hero-2.jpg' %});">
 					<div class="container h-full">
 						<div class="flex-col-l-m h-full p-t-100 p-b-30 respon5">
@@ -106,7 +102,7 @@
             {% endfor %}
 
             {% for category in links %}
-                {% if not category.soft_deleted and category.category_name == "Footballl " %}
+                {% if not category.soft_deleted and category.category_name == "Football" %}
                     <div class="col-lg-5">
                         <div class="banner__item banner__item--middle">
                             <div class="banner__item__pic">
